# xsoar-command-toolkit

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
configs/: settings.py
core/http/: client.py  exceptions.py
prompting/: prompt_engine.py  validators.py
src/: cortex_xsoar.py  normalize.py  orchestrator.py  payload_builder.py
src/xsoar_command_toolkit/: cli.py  main.py
src/xsoar_command_toolkit/configs/: settings.py
src/xsoar_command_toolkit/http/: client.py
src/xsoar_command_toolkit/inputs/: incident_to_create.json
src/xsoar_command_toolkit/orchestrator/: cortex_xsoar.py  normalize.py  orchestrator.py
src/xsoar_command_toolkit/prompting/: prompt_engine.py  validators.py
src/xsoar_command_toolkit/utils/: parse_args.py  utils.py
utils/: parse_args.py  utils.py
